# Copyright (c) 2025-2026, The Shekyl Foundation
#
# All rights reserved.
# BSD-3-Clause

[package]
name = "shekyl-pow-randomx"
description = "Pure-software RandomX v2 verifier for Shekyl daemon block validation (docs/design/RANDOMX_V2_PLAN.md, RANDOMX_V2_RUST.md)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# AES round primitive for AesGenerator1R/4R + AesHash1R per `specs.md`
# §§3.2-3.4. See workspace `Cargo.toml` for the verification record.
aes = { workspace = true }

# Blake2b for the BlakeGenerator's "S = Hash512(S)" rebuild step per
# `specs.md` §3.5. Direct dep per the workspace-Cargo.toml rationale.
blake2 = { workspace = true }


# Argon2d "memory fill" primitive used by Cache::derive (Phase 2e wraps
# this). Pinned at workspace minor (0.5) matching shekyl-crypto-pq's
# direct dep; Cargo's feature unification means the final feature set
# is (alloc + zeroize) regardless of which crate declares which.
#
# Verified at source against argon2-0.5.3
# (~/.cargo/registry/src/.../argon2-0.5.3/src/lib.rs:268-318):
# `Argon2::fill_memory(pwd, salt, &mut [Block])` performs exactly the
# RandomX-required "omit finalizer; output is the filled memory array"
# semantics from specs.md §7.1. The `output_len=0` path inside
# `initial_hash` (lib.rs:526) reproduces dataset.cpp:76's
# `context.outlen = 0`. Argon2d (algorithm.rs:54, discriminant 0) +
# Version::V0x13 (version.rs default) match the C fork's pin.
# See src/argon2d.rs module rustdoc for the complete dispositions.
#
# Feature notes:
# - `alloc`: required for `Argon2::fill_memory`'s internal Vec usage.
# - `zeroize`: activates `impl Zeroize for Block`. RandomX Cache
#   contents are PUBLIC (deterministic function of the seedhash, a
#   block-header value); zeroize is defense-in-depth rather than
#   load-bearing for our threat model, but enabling it here keeps
#   the feature union identical to shekyl-crypto-pq's, avoiding
#   a duplicate argon2 build with a different feature set.
argon2 = { version = "0.5", default-features = false, features = ["alloc", "zeroize"] }

[dev-dependencies]
# Criterion for the two Phase 2c informational benches per
# `docs/design/RANDOMX_V2_PHASE2C_PLAN.md` §5.8 + §8: `cache_derive`
# (sample_size=100 per §5.8) and `compute_hash_alloc` (sample_size=100
# per the bench's runtime-economics observation; §5.8's nominal
# N=10000 is intractable at the empirical ~hundreds-of-ms per-call
# cost — see the bench harness rustdoc). Version + feature set match
# `shekyl-crypto-pq`'s existing dev-dep (`rust/shekyl-crypto-pq/Cargo.toml`)
# so workspace dep-resolution stays unified rather than building a
# second criterion variant for this crate. No production code path
# depends on criterion.
#
# §5.8's "PR fails if median > X" budget shapes (≤200 ms for
# `cache_derive`, ≤100 µs for `compute_hash_alloc`) are recorded as
# planned targets in the plan doc; the empirical baselines on the
# reference machine exceed both (`cache_derive` ~341 ms,
# `compute_hash_alloc` ~296 ms end-to-end full-pipeline). The
# reconciliation — re-baseline the budgets to hardware-class
# measurements vs. introduce an allocation-only sub-bench vs. defer
# the per-hash latency check to Phase 2g's Rust-vs-C ratio — is
# tracked at `RANDOMX_V2_PHASE2C_PLAN.md` §14 (R0-D12). At Phase 2c
# both benches are **informational baselines** (recorded in
# `BENCH_RESULTS.md`), not enforced PR gates.
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
# `Cache::derive(&KEY)` end-to-end (Argon2d 256 MiB + 8 ×
# `generateSuperscalar`). Phase 2c informational baseline (~341 ms
# median on the reference machine per `BENCH_RESULTS.md`); §5.8's
# planned ≤200 ms budget is unmet pending the R0-D12 reconciliation
# in `RANDOMX_V2_PHASE2C_PLAN.md` §14. See `benches/cache_derive.rs`
# for the harness rationale and the threshold-enforcement disposition.
name = "cache_derive"
harness = false

[[bench]]
# `compute_hash(&cache, &SEEDHASH, &DATA)` end-to-end under stub-NOP
# dispatch (the Phase 2c `dispatch_instruction` NOP body; Phase 2d's
# real per-opcode body will grow this bench's per-call cost).
# Measures the *full pipeline* under stub-NOP, not the VmState
# allocation skeleton in isolation. Phase 2c informational baseline
# (~296 ms median per call on the reference machine per
# `BENCH_RESULTS.md`); §5.8's planned ≤100 µs budget targeted the
# allocation-only sub-bench (not landed yet) — full-pipeline numbers
# include the per-chain hash math + AES f/e mix + Blake2b chaining,
# all of which dominate the one-shot allocation. R0-D12 reconciliation
# in `RANDOMX_V2_PHASE2C_PLAN.md` §14 tracks the disposition. See
# `benches/compute_hash_alloc.rs` for the harness rationale.
name = "compute_hash_alloc"
harness = false

[[test]]
# Phase 2g per-hash latency placeholder per
# `docs/design/RANDOMX_V2_PHASE2C_PLAN.md` §5.8 disposition #3 + §13
# R3-minor-2: lands at the canonical 2g-deliverable path under
# `tests/perf/` so 2g's author finds it by grep. Cargo's default test
# discovery only auto-detects files at the top of `tests/`; the
# explicit `path` makes the under-`perf/` placement discoverable
# without losing the perf namespace. The body is `#[ignore]`'d so
# `cargo test` doesn't run it; 2g replaces the body in-place.
name = "per_hash_latency"
path = "tests/perf/per_hash_latency.rs"

[lints]
workspace = true
