[package]
name = "shekyl-proofs"
description = "Transaction proof and reserve proof protocol for Shekyl V3 (tx_proof, reserve_proof)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shekyl-crypto-pq = { path = "../shekyl-crypto-pq" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
curve25519-dalek = "4"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
rand = "0.8"
hex = "0.4"

[lints]
workspace = true
