# Copyright (c) 2025-2026, The Shekyl Foundation
#
# All rights reserved.
# BSD-3-Clause

[package]
name = "shekyl-scanner"
description = "Transaction scanner for the Shekyl protocol with FCMP++, PQC, and staking support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeroize = { version = "^1.5", features = ["zeroize_derive"] }
curve25519-dalek = { version = "4", features = ["alloc", "zeroize"] }
hex = { version = "0.4", features = ["alloc"] }
thiserror.workspace = true
serde.workspace = true
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros"], optional = true }
tokio-util = { version = "0.7", optional = true }

shekyl-oxide = { path = "../shekyl-oxide/shekyl-oxide" }
shekyl-rpc = { path = "../shekyl-oxide/shekyl-oxide/rpc" }
shekyl-crypto-pq = { path = "../shekyl-crypto-pq" }
shekyl-crypto-hash = { path = "../shekyl-crypto-hash" }
shekyl-staking = { path = "../shekyl-staking" }
shekyl-address = { path = "../shekyl-address" }
shekyl-generators = { path = "../shekyl-oxide/shekyl-oxide/generators" }
shekyl-wallet-state = { path = "../shekyl-wallet-state" }

[features]
default = ["std"]
std = ["shekyl-oxide/std", "shekyl-rpc/std"]
rust-scanner = ["tokio", "tokio-util"]
test-utils = []

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
proptest = "1"

# Hardening-pass commit 2 (`docs/MID_REWIRE_HARDENING.md` §3.2):
# criterion + iai-callgrind harness for the `scan_block_K` path.
# Benches exercise `LedgerIndexes::process_scanned_outputs` — the
# scanner's non-crypto bookkeeping path — over K synthetic owned
# outputs built via the crate's own `test-utils` constructors,
# operating on a fresh `(LedgerBlock, LedgerIndexes)` pair. The
# FCMP++/KEM output-recovery portion is separately covered by
# `shekyl-crypto-pq/benches/pqc_rederivation.rs`; the two together span
# the "owned output lands in wallet state" pipeline.
#
# Uses `dev-dependencies` self-dep pattern to enable the `test-utils`
# feature during bench compilation without leaking it into the crate's
# default feature set.
shekyl-scanner = { path = ".", features = ["test-utils"] }
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.16"

[[bench]]
name = "scan_block"
harness = false

[[bench]]
name = "scan_block_iai"
harness = false

[lints]
workspace = true
