[package]
name = "shekyl-shard-visual"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic shard identity visuals (candidate.v1 compositor)"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = "0.25"
serde = { workspace = true, features = ["derive"] }
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
thiserror.workspace = true

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
